@@ -1,3 +1,10 @@
+2008-01-16  Tambet Ingo  <tambet@gmail.com>
+
+	* src/gconf-helpers/nma-gconf-settings.c
+		- (connection_changes_done, add_connection_real, connection_removed):
+			fix handling of connections removed from GConf by external programs
+			(bgo #557590)
+
 2008-01-16  Dan Williams  <dcbw@redhat.com>
 
 	* nm-connection-editor.c
